style: fix product details align

--- a/client/src/styles/ProductDetails.scss
+++ b/client/src/styles/ProductDetails.scss
@@ -105,4 +105,9 @@
   background: #ad855e;
   width: 350px;
   height: 50px;
+  cursor: pointer;
+}
+
+.seller-description {
+  text-align: left;
 }
